--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         matrixinputwidget.h matrixinputwidget.cpp
         resultswidget.h resultswidget.cpp
+        matrixfilehandler.h matrixfilehandler.cpp
+
 
     )
 # Define target properties for Android with Qt 6 as:
@@ -45,7 +47,7 @@ else()
     endif()
 endif()
 
-target_link_libraries(matrixApp PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(matrixApp PRIVATE Qt${QT_VERSION_MAJOR}::Widgets yaml-cpp)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
